updated gap bug and updated experience pages background sizing

--- a/src/style/experiencePage/experiencePage.scss
+++ b/src/style/experiencePage/experiencePage.scss
@@ -107,6 +107,7 @@
         img {
           height: 100%;
           width: 100%;
+          
         }
       }
     }
@@ -116,6 +117,7 @@
 
 @media (max-width: 375px) {
   .main-page__container {
+    
     display: flex;
     flex-direction: column;
     width: 375px;
@@ -127,13 +129,14 @@
     // flex-direction: column;
 
     width: 375px;
+    overflow: hidden;
   
     .header-background {
       // display: flex;
       // flex-direction: column;
       // align-items: center;
       // justify-content: center;
-      // height: 415px;
+      height: 600px;
   
       &__title {
         // position: absolute;
@@ -142,15 +145,15 @@
         // font-family: "Raleway", sans-serif;
         // text-transform: uppercase;
         // text-shadow: 4px 4px black;
-        font-size: 4.5em;
+        font-size: 3.6em;
         top: 25%;
         // padding: 10px;
       }
   
       &__image {
-        // background-image: url(../../static/assets/images/featuredExperience/rockClimb/heroBanner/rockHeroMobile.jpg);
+        
         height: 100vh;
-        width: 100vw;
+        width: 400%;
       }
     }
   }
