--- a/src/style/experiencePage/guideSection.scss
+++ b/src/style/experiencePage/guideSection.scss
@@ -38,6 +38,7 @@
   @media (max-width: 375px) {
 
     .guide-section-wrapper {
+      
       display: flex;
       flex-direction: column;
       width: 375px;
@@ -64,7 +65,7 @@
       justify-content: center;
       align-content: center;
       flex-direction: column;
-      padding: 50px;
+      padding: 25px;
     
       .guide-content {
         display: flex;
